# Vosi

./: .gitignore  README.md  README.zh-CN.md  about.html  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PROJECT-SUMMARY.md  README.md
models/: manifest.json
scripts/: download-models.sh  generate-logo.py  install-punctuation-model.sh  prepare-bundle-models.sh
src/: about.ts  main.ts  overlay.css  overlay.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/: hotkey_monitor.m  microphone_permission.m
src-tauri/resources/: hotwords-tech.txt
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/app/: mod.rs  state.rs  tray.rs
src-tauri/src/asr/: engine.rs  mod.rs  model_manager.rs  paths.rs  punctuation.rs
src-tauri/src/audio/: capture.rs  level.rs  mod.rs  resample.rs  vad.rs
src-tauri/src/config/: mod.rs  types.rs
src-tauri/src/hotkey/: listener.rs  macos.rs  mod.rs
src-tauri/src/i18n/: locale.rs  mod.rs
src-tauri/src/inject/: macos.rs  mod.rs  windows.rs
src-tauri/src/locales/: en.json  ja.json  zh.json
src-tauri/src/log/: mod.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/permissions/: macos.rs  microphone_macos.rs  mod.rs  status.rs
src-tauri/src/pipeline/: session.rs
src-tauri/src/post/: hotword.rs  itn.rs  mod.rs  pipeline.rs  punctuation.rs
src-tauri/tests/: asr_golden.rs  asr_pipeline.rs  vad_segment.rs
(+24 files in other folders)
